--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-openid-connect": "^2.10.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.7.0"
@@ -35,6 +37,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
     "@types/passport": "^1.0.11",
+    "@types/passport-auth0": "^1.0.5",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "ts-node": "^10.9.1",
